adds GET /pgusers/by/account_id/{id}
