# service/PgusersService.js
@@ -102,3 +102,20 @@ exports.pgusersPOST = async body => await db.sequelize.transaction(async tx => {
 	);
 	return pgu;
 });
+
+/**
+ * returns array of pgusers matching a given account_id
+ *
+ * id Integer 
+ * returns Pguser
+ **/
+exports.pgusersAccount_idIdGET = async id => {
+	const r = await Pguser.findAll({
+		where: {
+			account_id: id
+		}
+	});
+	if (!r || !Array.isArray(r) || r.length <= 0)
+		throw new Error('ENOENT');
+	return r;
+}
